@@ -8,6 +8,7 @@ README.md
 scripts/generate_index.pl
 t/30-basics.t
 t/conf/abbreviate.yml
+t/edge_cases.t
 t/eof.t
 t/eol.t
 t/fuzz.t
