@@ -5,6 +5,7 @@ Revision history for Text-Names-Abbreviate
 	Added the test dashboard
 	Added fuzz testing in GitHub Actions
 	Fixed "abbreviate('0')" which gave a Usage error
+	Fixed edge cases
 
 0.01	Wed May 28 21:01:16 EDT 2025
         First draft
